# bullrs_vibe

./: Cargo.toml  PATTERNS.md  README.md  REFERENCE.md
examples/: basic_queue.rs  error_handling.rs  priority_queue.rs  progress_tracking.rs  repeatable_jobs.rs
src/: errors.rs  lib.rs  main.rs  utils.rs
src/commands/: script_loader.rs
src/job/: mod.rs
src/lib/: mod.rs
src/lib/backoff/: mod.rs
src/lib/commands/: mod.rs  script_loader.rs
src/lib/job/: mod.rs
src/lib/process/: mod.rs
src/lib/queue/: mod.rs
src/lib/repeatable/: mod.rs
src/lib/worker/: mod.rs
src/mock/: redis.rs
src/process/: mod.rs
src/queue/: mod.rs
src/worker/: mod.rs
