[package]
name = "bullrs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the Bull queue library"

[dependencies]
redis = { version = "0.23.0", features = ["tokio-comp"] }
tokio = { version = "1.28.0", features = ["full"] }
async-trait = "0.1.68"
thiserror = "1.0.40"
anyhow = "1.0.71"
sha1 = "0.10.5"
regex = "1.8.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.28"
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.10.0"
globset = "0.4.10"
pathdiff = "0.2.1"
walkdir = "2.3.3"
md5 = "0.7.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
tempfile = "3.8.0"
